# dais-2025-databricks-apps

./: .env.example  .gitignore  Makefile  README.md  app.yml  databricks.yml  pyproject.toml  setup.sh
hooks/: apps_build.py
src/dais_2025_databricks_apps/: app.py  config.py
src/dais_2025_databricks_apps/app_pages/: __init__.py  dbsql_basics.py  genie_chat.py  intro.py
tests/: test_message_model.py
